Replace Collectors.toList with toList
Signed-off-by: lisrte <laurent.issertial@rte-france.com>